# interpolate-tensoriterator

./: .gitignore  README.md  bench.py
avx_examples/: .gitignore  Makefile  main_fma.cpp  main_mul.cpp
check_parallel_blocks/: CMakeLists.txt  main.cpp  ti_check_blocks.h
check_vec256/: CMakeLists.txt  main.cpp
inspect_assembly_code/: main.cpp  output-no-strides-optim-2.lst  output-no-strides-optim.lst  output-with-strides-optim.lst
playground/: README.md  strides_cases.md
playground/asan/: use-after-free.cpp
playground/avx_examples/: Makefile  check_add_uint8  check_add_uint8.cpp  main_add.cpp  main_add_uint8.cpp
playground/check_vec256/: CMakeLists.txt  main.cpp
playground/inspect_assembly_code/: generate.sh  main.cpp  main.list  main.s  output-with-strides-optim-2.lst  simple_main.cpp
playground/step_five/: PR_failures.md  PR_vs_this_full_results.log.save  full_results.log.save  interpolate.h  main.cpp  mix-int32-64.log.save  pth_vs_PR_results.log.save
playground/step_four_1d_2d_3d/: full_results.log.save
playground/step_six_initial/: README.md  interpolate.h  main.cpp
playground/step_three/: CMakeLists.txt  interpolate.h
playground/step_two/: main.cpp
playground/step_two_dot_one/: interpolate.h  main.cpp
playground/vtune-pth-profiling/: README.md
step_eight_backward/: interpolate.cpp  interpolate.h  interpolate_backward.cpp  main.cpp  make_results_table_from_pickles.py  wrong_interpolate_backward.cpp
step_eight_backward/linear/: CMakeLists.txt  bench_helper.h  interpolate_backward.cpp
step_eight_backward/nearest/: bench_helper.h
step_five/: CMakeLists.txt  all-int64.log.save  interpolate.h  main.cpp  pth_vs_this_full_results.log.save
step_four_1d_2d_3d/: interpolate.h  main.cpp
step_one/: CMakeLists.txt  interpolate.h  main.cpp
step_seven/: interpolate.cpp  interpolate.h  interpolate_sep_functions.h  pth_vs_this_full_results.log.save  run_all_bench.sh  run_profiling_pth.py  run_pytorch_bench.py  run_pytorch_native_bench.py  run_pytorch_native_bench.sh  run_pytorch_native_bench_debug.sh
step_seven/cubic/: CMakeLists.txt  bench_helper.h  main.cpp
step_seven/godbolt_snippets/: loop2d.cpp  loop_generic_3d.cpp
step_seven/linear/: CMakeLists.txt  interpolate.cpp  interpolate_loop2d.cpp  main.cpp
step_seven/nearest/: CMakeLists.txt  bench_helper.h  main.cpp
step_seven/results/: 20210325-094144_pr_1.9.0a0+git8c4ff84_vs_pth_1.9.0a0+git8518b0e_results.opencv.md  20210325-094144_pr_results_1.9.0a0+git8c4ff84.log.save.opencv  20210325-094144_pth_nightly_results_1.9.0a0+git8518b0e.log.save.opencv  20210326-061238_pr_1.9.0a0+gita17040a_vs_pth_1.9.0a0+git8518b0e_results.md  20210326-061238_pr_results_1.9.0a0+gita17040a.log.save  20210331-092940_pth_nightly_results_1.9.0a0+git8518b0e.log.save  (+35 more)
step_seven_two/: interpolate.cpp  interpolate.h  run_all_bench_debug.sh  run_profiling_single_op.py  run_pytorch_native_bench.py  run_pytorch_native_bench.sh  run_pytorch_native_bench_debug.sh
step_seven_two/nearest/: CMakeLists.txt  bench_helper.h  generate_assembly.sh  interpolate_min_float.cpp  interpolate_min_uint8.cpp  main.cpp
step_six/: CMakeLists.txt  PR_53211_vs_this_results_bench2d_channels_last_only.log.save  PR_53211_vs_this_results_bench2d_channels_last_only.log.save.2  PR_53211_vs_this_results_bench3d_only.log.save  PR_53211_vs_this_results_bench3d_only.log.save.1  PR_vs_this_full_results.log.save  bench_helper.h  check_pth_data_strides.py  custom_pr_1.9.0a0+git5f89f61_vs_pth_1.9.0a0+git370bcc8_results.md  full_results.log.save  interpolate.cpp  interpolate.h  interpolate_ch_last_vec256.cpp  interpolate_ch_last_vec256.h  interpolate_fmassa_pr.cpp  interpolate_split.cpp  interpolate_split.h  main.cpp  main_pth_only.cpp  make_results_table.py  make_results_table_from_pickles.py  output.md  pr_1.9.0a0+594f1ec_vs_pth_results.md  pr_1.9.0a0+git3d72ad9_vs_pth_1.9.0.dev20210302+cpu_results.md.3  pr_1.9.0a0+git66f07c0_vs_pth_1.9.0.dev20210302+cpu_results.md.2  pr_results.log.save  pr_results_1.9.0a0+149b976.log.save  pr_results_1.9.0a0+594f1ec.log.save  pr_results_1.9.0a0+git3d72ad9.log.save.3  pr_results_1.9.0a0+git66f07c0.log.save  pr_results_1.9.0a0+git66f07c0.log.save.2  pr_results_kept_original_channels_last.log.save  pr_results_with_ti_channels_last.log.save  pr_vs_pth_results_kept_original_channels_last.md  pr_vs_pth_results_with_ti_channels_last.md  pth_nightly_results.log.save  pth_nightly_results_1.9.0.dev20210302+cpu.log.save  pth_nightly_results_1.9.0.dev20210302+cpu.log.save.2  pth_vs_PR_results.log.save  pth_vs_this_full_results.log.save  (+7 more)
step_six/results/: PR_53211_vs_this_results_bench2d_channels_last_only.log.save.3  PR_53211_vs_this_results_bench2d_channels_last_only.log.save.5  PR_vs_this_full_results.log.save  custom_pr_1.9.0a0+git0247030_vs_pth_1.9.0a0+git6aa5148_results.md  custom_pr_1.9.0a0+git5f89f61_vs_pth_1.9.0a0+git6aa5148_results.md  custom_pr_results_1.9.0a0+git0247030.log.save  custom_pr_results_1.9.0a0+git5f89f61.log.save  custom_pth_nightly_results_1.9.0a0+git370bcc8.log.save  custom_pth_nightly_results_1.9.0a0+git6aa5148.log.save  pr_1.9.0a0+149b976_vs_pth_results.md  pr_1.9.0a0+74b172b_vs_pth_results.md  pr_1.9.0a0+git66f07c0_vs_pth_results.md  pr_results_1.9.0a0+74b172b.log.save  pr_results_kept_original_channels_last.log.save  pr_results_with_ti_channels_last.log.save  pr_vs_pth_results_with_ti_channels_last.md  pth-no-dispatch_vs_this_results_bench2d_channels_last_only.log.save  pth-no-dispatch_vs_this_results_bench3d_only.log.save  pth_nightly_results.log.save  pth_nightly_results_1.9.0.dev20210302+cpu.log.save.3  pth_vs_PR_results.log.save  pth_vs_this_full_results.log.save  pth_vs_this_full_results_int32.log.save  results_gcc54.log.save  results_gcc93.log.save
step_six/slowdown_inspect/: generate_pr_lst.sh  generate_proto_lst.sh  main_pr.cpp  main_pr.lst  main_proto.cpp
step_three/: CMakeLists.txt  interpolate.h  main.cpp
step_two/: CMakeLists.txt  interpolate.h  main.cpp
step_two_dot_one/: CMakeLists.txt  interpolate.h  interpolate_saved.h  main.cpp
step_two_profile/: interpolate.h  main.cpp
(+36 files in other folders)
